add files.support self configed split file format.pass test

--- a/sys/test/testlog.conf
+++ b/sys/test/testlog.conf
@@ -1,5 +1,7 @@
 #log data dir.
 log.prefix:./log
+log.async:false
+log.splitFormat:_%Y%m%d_%H%M%S_%P_%n
 log.instance:test,%L %N %T %P %f(%F:%l) %M,test.log,20000,10
 log.instance:test2,%L %N %T %P %f(%F:%l) %M,test.log,20000,10
 log.instance:test3,%L %N %T %P %f(%F:%l) %M,/home/donzell/code/mycode/github/mycode/sys/bin/log/test.log,20000,10
