--- a/sys/test/testlog.conf
+++ b/sys/test/testlog.conf
@@ -1,8 +1,8 @@
 #log data dir.
 log.prefix:./log
-log.async:false
+log.async:true
 log.splitFormat:_%Y%m%d_%H%M%S_%P_%n
-log.instance:test,%L %N %T %P %f(%F:%l) %M,test.log,20000,10
+log.instance:test,%L %N %T %P %f(%F:%l) %M,test.log,2000000000,10
 log.instance:test2,%L %N %T %P %f(%F:%l) %M,test.log,20000,10
 log.instance:test3,%L %N %T %P %f(%F:%l) %M,/home/donzell/code/mycode/github/mycode/sys/bin/log/test.log,20000,10
 log.instance:test4,%L %N %T %P %f(%F:%l) %M,./log/test.log,10000,10
