--- a/sys/test/Makefile
+++ b/sys/test/Makefile
@@ -4,7 +4,7 @@ CXX = g++
 INCS += -I../output/include
 LIBS +=	-lgtest -L../output/lib -lfslog -lboost_thread -lpthread
 
-CXXFLAGS=-pipe -g -fpic -Wall -Wextra -Wconversion -Wno-unused-parameter -Wno-old-style-cast -Woverloaded-virtual -Wpointer-arith -Wshadow -Wwrite-strings -rdynamic $(INCS)
+CXXFLAGS=-pipe -g -fpic -Wall -Wextra -Wconversion -Wno-unused-parameter -Wno-old-style-cast -Woverloaded-virtual -Wpointer-arith -Wwrite-strings -rdynamic $(INCS)
 
 SOURCES = $(wildcard *.cc)
 OBJS=${SOURCES:%.cc=%.o}
