--- a/sys/test/testlog.conf
+++ b/sys/test/testlog.conf
@@ -1,6 +1,6 @@
 #log data dir.
 log.prefix:./log
-log.async:true
+log.async:false
 log.splitFormat:_%Y%m%d_%H%M%S_%P_%n
 log.instance:test,%L %N %T %P %f(%F:%l) %M,test.log,2000000000,10
 log.instance:test2,%L %N %T %P %f(%F:%l) %M,test.log,20000,10
