无锁的checkFile和write，之前write不在锁里边是错误的；循环创建所需路径；如果开始无法打开文件，先输出到stderr.以后可以打开了，自动切到新文件。

--- a/sys/test/testlog.conf
+++ b/sys/test/testlog.conf
@@ -4,5 +4,5 @@ log.async:false
 log.splitFormat:_%Y%m%d_%H%M%S_%P_%n
 log.instance:test,%L %N %T %P:%t %f(%F:%l) %M,test.log,2000000000,10
 log.instance:test2,%L %N %T %P %f(%F:%l) %M,test.log,20000,10
-log.instance:test3,%L %N %T %P %f(%F:%l) %M,/home/donzell/code/mycode/github/mycode/sys/bin/log/test.log,20000,10
+log.instance:test3,%L %N %T %P %f(%F:%l) %M,~/code/mycode/github/mycode/sys/bin/log/test.log,20000,10
 log.instance:test4,%L %N %T %P %f(%F:%l) %M,./log/test.log,10000,10
