添加多进程测试；使用gettid替换pthread_self；修复fork后tid没能更新的bug

--- a/sys/example/example.conf
+++ b/sys/example/example.conf
@@ -27,7 +27,7 @@ log.splitFormat:_%Y%m%d_%H%M%S_%P_%n
 #logger_instance,format,logfile_path,logsize,loglevel
 #L for level,N for instance,T for time,P for pid,t for tid,f for func,F for file,l for line,M for user's msg.
 log.instance:serverlog,%L %N %T %P:%t %f(%F:%l) %M,server.log,2000000000,4
-log.instance:dblog,%L %N %T %P %f(%F:%l) %M,dblog.log,20000,100
+log.instance:dblog,%L %N %T %P:%t %f(%F:%l) %M,dblog.log,20000,100
 log.instance:test3,%L %N %T %P %f(%F:%l) %M,test.log,20000,100
 log.instance:test4,%L %N %T %P %f(%F:%l) %M,./log/test.log,10000,0
 
